--- a/AsterixLib/AsterixLib/AsterixLib.csproj
+++ b/AsterixLib/AsterixLib/AsterixLib.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Accord.Math" Version="3.8.0" />
+    <PackageReference Include="GMap.NET.Core" Version="2.1.7" />
+    <PackageReference Include="GMap.NET.WindowsForms" Version="1.7.5" />
   </ItemGroup>
 
 </Project>
