DataGrid més ràpid

--- a/AsterixForms/AsterixForms.csproj
+++ b/AsterixForms/AsterixForms.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="GMap.NET.Core" Version="2.1.7" />
     <PackageReference Include="GMap.NET.WindowsForms" Version="1.7.5" />
+    <PackageReference Include="GMap.NET.WinForms" Version="2.1.7" />
   </ItemGroup>
 
   <ItemGroup>
