--- a/LibAsterix/LibAsterix.csproj
+++ b/LibAsterix/LibAsterix.csproj
@@ -72,6 +72,7 @@
     <Compile Include="21_Communication_ACAS.cs" />
     <Compile Include="AsterixGrid.cs" />
     <Compile Include="data_item.cs" />
+    <Compile Include="Dictionary_Info.cs" />
     <Compile Include="GeneralMatrix_v2.cs" />
     <Compile Include="Geodesic_Coord.cs" />
     <Compile Include="GeoUtils.cs" />
