changes on simulation buttons

--- a/FormsAsterix/FormsAsterix.csproj
+++ b/FormsAsterix/FormsAsterix.csproj
@@ -153,5 +153,26 @@
   <ItemGroup>
     <None Include="Resources\fondo1.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\kml-file-format-variant.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\restart.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\folder.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sheet.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\csv.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pause.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\play-button.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
